# text_processing_demo

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
src/: text_processing_demo.py
tests/: test_text_processing_demo.py
